--- a/front/package.json
+++ b/front/package.json
@@ -3,11 +3,12 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.4",
-    "@mui/material": "^6.1.3",
     "@mui/joy": "^5.0.0-beta.48",
+    "@mui/material": "^6.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.8.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
