[chore] package.json prisma 추가

--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,13 @@
   },
   "private": true,
   "dependencies": {
+    "@prisma/client": "^5.21.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "mysql2": "^3.11.3",
     "socket.io": "^4.8.0"
+  },
+  "devDependencies": {
+    "prisma": "^5.21.1"
   }
 }
